--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
             margin-top: 12px;
             font-size: 14px;
             opacity: 0.9;
+            text-align: center;
         }
 
         /* Responsive for small screens */
@@ -192,7 +193,7 @@
 
 <section>
     <!-- Download FAQ & Prices Button -->
-    <a href="/Kev_Bayliss_FAQ_and_Pricing_2026_v3.pdf" class="button button-purple" target="_blank" rel="noopener">
+    <a href="/Kev_Bayliss_FAQ_and_Pricing_2026_v4.pdf" class="button button-purple" target="_blank" rel="noopener">
         <strong>DOWNLOAD FAQ &amp; PRICES</strong>
     </a>
 
@@ -230,20 +231,20 @@
     </p>
 
     <p>
-        Today, I continue to create and share my passion for art and character design — from original paintings and digital artwork through to commissioned pieces, character design, and more. Whether I'm working on a new commission or painting live on Twitch, I’m always eager to share my creative process and the stories behind the characters I’ve helped bring to life.
+        Today, I continue to create and share my passion for art and character design — from original paintings and digital artwork through to commissioned pieces and more. Whether I'm working on a new commission or painting live on Twitch, I’m always eager to share my creative process and the stories behind the characters I’ve helped bring to life.
     </p>
   </div>
 
-  <!-- SERVICES (Character Design prominent) -->
+  <!-- SERVICES (short & skimmable) -->
   <div class="services-box">
     <h2>Services I Offer</h2>
     <ul>
-      <li><strong>Character Design (Primary Service)</strong> — bespoke character creation for creators, studios, writers and personal projects. Character design is a separate category from general art commissions because it involves developing a character identity that may be used commercially. Ownership can be transferred by written agreement, while authorship credit remains clear.</li>
-      <li><strong>Artwork &amp; Illustration Commissions</strong> — original paintings, sketches, digital illustrations, and tattoo designs. These commissions focus on delivering a finished artwork (digital or traditional).</li>
-      <li><strong>Voice Acting &amp; Voice-Over</strong> — available for selected projects. I have provided voice work for games including Diddy Kong Racing (Wizpig, Bubbler), GoldenEye 007 (James Bond), Killer Instinct (various), Star Fox Adventures (Prince Tricky) and more. Recorded with professional audio equipment.</li>
+      <li><strong>Character Design</strong> — original character creation for creators, studios, and personal projects.</li>
+      <li><strong>Art Commissions</strong> — paintings, sketches, digital artwork, and tattoo designs.</li>
+      <li><strong>Voice Acting &amp; Voice-Over</strong> — available for selected projects (games, video, and creative work).</li>
     </ul>
     <div class="services-note">
-      For pricing guides, artwork rights, shipping info, and FAQs, please use the <strong>Download FAQ &amp; Prices</strong> button above.
+      For detailed service info, selected credits, pricing guides, and FAQs, please use <strong>Download FAQ &amp; Prices</strong> above.
     </div>
   </div>
 </section>
