--- a/index.html
+++ b/index.html
@@ -58,15 +58,19 @@
         }
 
         .button-green {
-            background-color: #00ff00; /* Green for eBay */
+            background-color: #00ff00; /* Green */
         }
 
         .button-blue {
-            background-color: #0000ff; /* Blue for Twitch */
+            background-color: #0000ff; /* Blue */
+        }
+
+        .button-black {
+            background-color: #000000; /* Black */
         }
 
         .button-purple {
-            background-color: #6a0dad; /* Purple for Download FAQ */
+            background-color: #6a0dad; /* Purple */
         }
 
         .button:hover {
@@ -193,7 +197,9 @@
 
 <section>
     <!-- Download FAQ & Prices Button -->
-    <a href="/Kev_Bayliss_FAQ_and_Pricing_2026_v4.pdf" class="button button-purple" target="_blank" rel="noopener">
+    <a href="/Kev_Bayliss_FAQ_and_Pricing_2026_v4.pdf" class="button button-red" target="_blank" rel="noopener">
+        <img src="KevBayliss.github.io
+/document icon.png" alt="eBay" class="icon"> <strong>VISIT MY EBAY STORE</strong>
         <strong>DOWNLOAD FAQ &amp; PRICES</strong>
     </a>
 
@@ -251,7 +257,7 @@
 
 <!-- CONTACT ME button placed just above social links -->
 <section>
-    <a href="mailto:kevbaylissart@outlook.com" class="button button-red">
+    <a href="mailto:kevbaylissart@outlook.com" class="button button-black">
         <img src="KevBayliss.github.io/mail icon.png" alt="Email" class="icon"> <strong>CONTACT ME</strong>
     </a>
 </section>
