--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     <!-- Download FAQ & Prices Button -->
     <a href="/Kev_Bayliss_FAQ_and_Pricing_2026_v4.pdf" class="button button-red" target="_blank" rel="noopener">
         <img src="KevBayliss.github.io
-/document icon.png" alt="eBay" class="icon"> <strong>VISIT MY EBAY STORE</strong>
+/document icon.png" alt="eBay" class="icon"> <strong>FAQ & PRICE GUIDE</strong>
         <strong>DOWNLOAD FAQ &amp; PRICES</strong>
     </a>
 
