--- a/index.html
+++ b/index.html
@@ -196,11 +196,10 @@
 </header>
 
 <section>
-    <!-- Download FAQ & Prices Button -->
+    <!-- FAQ & Prices Button -->
     <a href="/Kev_Bayliss_FAQ_and_Pricing_2026_v4.pdf" class="button button-red" target="_blank" rel="noopener">
         <img src="KevBayliss.github.io
 /document icon.png" alt="eBay" class="icon"> <strong>FAQ & PRICE GUIDE</strong>
-        <strong>DOWNLOAD FAQ &amp; PRICES</strong>
     </a>
 
     <!-- eBay Button with Custom Icon -->
@@ -225,11 +224,11 @@
 
   <div class="about-me-text">
     <p class="lead">
-        I’m a British artist and game creator with a career spanning almost 40 years in the video game industry. I began my journey in the late 1980s at Rare Ltd.
+        I’m a British artist and game creator with a career spanning almost 40 years in the video game industry.
     </p>
 
     <p>
-      Here I had the opportunity to redesign <strong>Donkey Kong</strong>, and I’m proud that he has remained an iconic figure ever since. Alongside this, I created <strong>Diddy Kong</strong> for Nintendo and also the characters from <strong>Killer Instinct</strong> and <strong>Battletoads</strong>.
+      I began my journey in the late 1980s at Rare Ltd. Here I had the opportunity to redesign <strong>Donkey Kong</strong>, and I’m proud to say that he has remained an iconic figure ever since. Alongside this, I created <strong>Diddy Kong</strong> for Nintendo and also the characters from <strong>Killer Instinct</strong> and <strong>Battletoads</strong>.
     </p>
 
     <p>
