--- a/index.html
+++ b/index.html
@@ -197,18 +197,18 @@
 
 <section>
     <!-- FAQ & Prices Button -->
-    <a href="/Kev_Bayliss_FAQ_and_Pricing_2026_v4.pdf" class="button button-red" target="_blank" rel="noopener">
+    <a href="/Kev_Bayliss_FAQ_and_Pricing_2026_v4.pdf" target="_blank" class="button button-red" target="_blank" rel="noopener">
         <img src="KevBayliss.github.io
 /document icon.png" alt="eBay" class="icon"> <strong>FAQ & PRICE GUIDE</strong>
     </a>
 
     <!-- eBay Button with Custom Icon -->
-    <a href="https://www.ebay.co.uk/usr/Kev_Bayliss_Art" class="button button-green">
+    <a href="https://www.ebay.co.uk/usr/Kev_Bayliss_Art" target="_blank" class="button button-green">
         <img src="KevBayliss.github.io/ebay icon.png" alt="eBay" class="icon"> <strong>VISIT MY EBAY STORE</strong>
     </a>
 
     <!-- Twitch Button with Custom Icon -->
-    <a href="https://www.twitch.tv/Kev_Bayliss" class="button button-blue">
+    <a href="https://www.twitch.tv/Kev_Bayliss" target="_blank" class="button button-blue">
         <img src="KevBayliss.github.io/twitch icon.png" alt="Twitch" class="icon"><strong>WATCH MY TWITCH CHANNEL</strong>
     </a>
 </section>
