--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     <!-- FAQ & Prices Button -->
     <a href="/Kev_Bayliss_FAQ_and_Pricing_2026_v4.pdf" target="_blank" class="button button-red" target="_blank" rel="noopener">
         <img src="KevBayliss.github.io
-/document icon.png" alt="eBay" class="icon"> <strong>FAQ & PRICE GUIDE</strong>
+/document icon.png" alt="Faq" class="icon"> <strong>FAQ & PRICE GUIDE</strong>
     </a>
 
     <!-- eBay Button with Custom Icon -->
