--- a/index.html
+++ b/index.html
@@ -204,7 +204,8 @@
     /* Replace this with your own brick texture image path when ready */
     background:
       linear-gradient(rgba(10,10,10,0.65), rgba(10,10,10,0.65)),
-      url("/brick-wall-texture.jpg");
+      url("KevBayliss.github.io
+/brick-wall-texture.jpg");
     background-size: cover;
     background-position: center;
     padding: 34px 22px 28px;
@@ -392,68 +393,66 @@
   </div>
 
 
+
+
+
+    
 <section class="artwall" aria-label="Artwork gallery">
   <div class="artwall__bg">
     <div class="artwall__header">
       <div>
-        <h2 class="artwall__title">Original Artwork</h2>
+        <h2 class="artwall__title">Selected Artwork</h2>
         <p class="artwall__subtitle">
-          A small selection of recent paintings. Click any piece to view availability on eBay.
+          Examples of original acrylic paintings. These works are shown as portfolio samples.
         </p>
       </div>
-
-      <!-- Keep your eBay link EXACT as you prefer -->
-      <a class="artwall__cta" href="https://www.ebay.co.uk/usr/Kev_Bayliss_Art" target="_blank" rel="noopener">
-        View available originals on eBay →
-      </a>
     </div>
 
     <div class="artgrid">
       <!-- CARD 1 -->
-      <a class="artcard" href="https://www.ebay.co.uk/usr/Kev_Bayliss_Art" target="_blank" rel="noopener">
+      <div class="artcard">
         <div class="frame">
           <div class="mount">
-            <img class="artimg" src="/art/thumbs/painting_01.jpg" alt="Painting 1 thumbnail">
+            <img class="artimg" src="KevBayliss.github.io
+/painting_01.jpg" alt="Original acrylic painting example">
           </div>
         </div>
         <div class="artmeta">
-          <p class="artmeta__title">Painting Title (replace)</p>
-          <p class="artmeta__desc">Acrylic on canvas • Size info (optional)</p>
-          <span class="artmeta__tag">Click to view</span>
+          <p class="artmeta__title">Painting Title</p>
+          <p class="artmeta__desc">Acrylic on canvas • Year</p>
+          <span class="artmeta__tag">Portfolio example</span>
         </div>
-      </a>
+      </div>
 
       <!-- CARD 2 -->
-      <a class="artcard" href="https://www.ebay.co.uk/usr/Kev_Bayliss_Art" target="_blank" rel="noopener">
+      <div class="artcard">
         <div class="frame">
           <div class="mount">
-            <img class="artimg" src="/art/thumbs/painting_02.jpg" alt="Painting 2 thumbnail">
+            <img class="artimg" src="KevBayliss.github.io
+/painting_02.jpg" alt="Original acrylic painting example">
           </div>
         </div>
         <div class="artmeta">
-          <p class="artmeta__title">Painting Title (replace)</p>
-          <p class="artmeta__desc">Acrylic on canvas • Size info (optional)</p>
-          <span class="artmeta__tag">Click to view</span>
-        </div>
-      </a>
+          <p class="artmeta__title">Painting Title</p>
+          <p class="artmeta__desc">Acrylic on canvas • Year</p>
 
-      <!-- CARD 3 -->
-      <a class="artcard" href="https://www.ebay.co.uk/usr/Kev_Bayliss_Art" target="_blank" rel="noopener">
+     <!-- CARD 3 -->
+      <div class="artcard">
         <div class="frame">
           <div class="mount">
-            <img class="artimg" src="/art/thumbs/painting_03.jpg" alt="Painting 3 thumbnail">
+            <img class="artimg" src="KevBayliss.github.io
+/painting_03.jpg" alt="Original acrylic painting example">
           </div>
         </div>
         <div class="artmeta">
-          <p class="artmeta__title">Painting Title (replace)</p>
-          <p class="artmeta__desc">Acrylic on canvas • Size info (optional)</p>
-          <span class="artmeta__tag">Click to view</span>
+          <p class="artmeta__title">Painting Title</p>
+          <p class="artmeta__desc">Acrylic on canvas • Year</p>
+          <span class="artmeta__tag">Portfolio example</span>
         </div>
-      </a>
+      </div>
     </div>
   </div>
 </section>
-
 
 
 
