--- a/index.html
+++ b/index.html
@@ -251,12 +251,16 @@
     transform: translateY(-1px);
   }
 
-  .artgrid {
-    display: grid;
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-    gap: 18px;
-    margin-top: 18px;
-  }
+.artgrid{
+  max-width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.artimg{
+  max-width: 460px;
+  margin: 0 auto;
+}
 
   @media (max-width: 980px) {
     .artgrid { grid-template-columns: repeat(2, minmax(0, 1fr)); }
