--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 .artwall__bg{
   background-image:
     linear-gradient(rgba(10,10,10,0.55), rgba(10,10,10,0.55)),
-    url("/brick-wall-texture.jpg");   /* make sure this exact name matches */
+    url("/brick-wall-texture.png");   /* make sure this exact name matches */
   background-repeat: no-repeat, repeat;  /* gradient no-repeat, brick repeats */
   background-size: auto, 1024px 1024px;  /* brick uses its native tile size */
   background-position: center, top left;
