--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
 .artwall__bg{
   background-image:
-    linear-gradient(rgba(10,10,10,0.55), rgba(10,10,10,0.55)),
+    linear-gradient(rgba(10,10,10,0.28), rgba(10,10,10,0.28)),
     url("/brick-wall-texture.png");   /* make sure this exact name matches */
   background-repeat: no-repeat, repeat;  /* gradient no-repeat, brick repeats */
   background-size: auto, 1024px 1024px;  /* brick uses its native tile size */
@@ -210,14 +210,10 @@
   padding: 34px 22px 28px;
 }
 
-  .artwall__header {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: baseline;
-    justify-content: space-between;
-    gap: 12px;
-    margin-bottom: 18px;
-  }
+.artwall__header{
+  text-align: center;
+  justify-content: center;
+}
 
   .artwall__title {
     margin: 0;
