--- a/index.html
+++ b/index.html
@@ -433,7 +433,10 @@
         <div class="artmeta">
           <p class="artmeta__title">Painting Title</p>
           <p class="artmeta__desc">Acrylic on canvas • Year</p>
-
+         <span class="artmeta__tag">Portfolio example</span>
+     </div>
+      </div>
+            
      <!-- CARD 3 -->
       <div class="artcard">
         <div class="frame">
