--- a/index.html
+++ b/index.html
@@ -211,8 +211,13 @@
 }
 
 .artwall__header{
-  text-align: center;
-  justify-content: center;
+  margin-bottom: 26px;
+}
+
+.artwall__subtitle{
+  max-width: 640px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
   .artwall__title {
