--- a/index.html
+++ b/index.html
@@ -227,12 +227,12 @@
     color: #fff;
   }
 
-  .artwall__subtitle {
-    margin: 6px 0 0;
-    color: rgba(255,255,255,0.82);
-    font-size: 0.98rem;
-    line-height: 1.35;
-  }
+.artwall__subtitle{
+  text-align: center;
+  max-width: 640px;
+  margin: 8px auto 0;
+}
+
 
   .artwall__cta {
     display: inline-flex;
