--- a/index.html
+++ b/index.html
@@ -214,11 +214,6 @@
   margin-bottom: 26px;
 }
 
-.artwall__subtitle{
-  max-width: 640px;
-  margin-left: auto;
-  margin-right: auto;
-}
 
   .artwall__title {
     margin: 0;
@@ -253,9 +248,9 @@
   }
 
 .artgrid{
-  max-width: 900px;
-  margin-left: auto;
-  margin-right: auto;
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  gap: 32px;
 }
 
 .artimg{
