--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
   text-align: center;
   max-width: 640px;
   margin: 8px auto 0;
+        color: #fff;
 }
 
 
@@ -416,8 +417,6 @@
           </div>
         </div>
         <div class="artmeta">
-          <p class="artmeta__title">Painting Title</p>
-          <p class="artmeta__desc">Acrylic on canvas • Year</p>
 
         </div>
       </div>
@@ -431,8 +430,6 @@
           </div>
         </div>
         <div class="artmeta">
-          <p class="artmeta__title">Painting Title</p>
-          <p class="artmeta__desc">Acrylic on canvas • Year</p>
 
      </div>
       </div>
@@ -446,8 +443,6 @@
           </div>
         </div>
         <div class="artmeta">
-          <p class="artmeta__title">Painting Title</p>
-          <p class="artmeta__desc">Acrylic on canvas • Year</p>
 
         </div>
       </div>
