--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
         <div class="frame">
           <div class="mount">
             <img class="artimg" src="KevBayliss.github.io
-/painting_01.jpg" alt="Original acrylic painting example">
+/ShesAKiller.jpg" alt="Original acrylic painting example">
           </div>
         </div>
         <div class="artmeta">
@@ -426,7 +426,7 @@
         <div class="frame">
           <div class="mount">
             <img class="artimg" src="KevBayliss.github.io
-/painting_02.jpg" alt="Original acrylic painting example">
+/OnSolidGround.jpg" alt="Original acrylic painting example">
           </div>
         </div>
         <div class="artmeta">
@@ -439,7 +439,7 @@
         <div class="frame">
           <div class="mount">
             <img class="artimg" src="KevBayliss.github.io
-/painting_03.jpg" alt="Original acrylic painting example">
+/CapitalBee.jpg" alt="Original acrylic painting example">
           </div>
         </div>
         <div class="artmeta">
