--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             <div class="artcard">
               <div class="frame">
                 <div class="mount">
-                  <img class="artimg" src="/ShesAKiller.jpg" alt="Original acrylic painting example">
+                  <img class="artimg" src="/ShesAKillerWatermark.jpg" alt="Original acrylic painting example">
                 </div>
               </div>
             </div>
@@ -338,7 +338,7 @@
             <div class="artcard">
               <div class="frame">
                 <div class="mount">
-                  <img class="artimg" src="/OnSolidGround.jpg" alt="Original acrylic painting example">
+                  <img class="artimg" src="/OnSolidGroundWatermark.jpg" alt="Original acrylic painting example">
                 </div>
               </div>
             </div>
@@ -346,7 +346,7 @@
             <div class="artcard">
               <div class="frame">
                 <div class="mount">
-                  <img class="artimg" src="/CapitalBee.jpg" alt="Original acrylic painting example">
+                  <img class="artimg" src="/CapitalBeeWatermark.jpg" alt="Original acrylic painting example">
                 </div>
               </div>
             </div>
