--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en
+
+  <link rel="icon" type="/favicon_initials_32x32.png" sizes="32x32" href="/favicon.png">
+<link rel="icon" type="favicon_initials_16x16.png" sizes="16x16" href="/favicon.png">
+
+
+  
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
