--- a/index.html
+++ b/index.html
@@ -364,9 +364,9 @@
       <div class="services-box">
         <h2>Services I Offer</h2>
         <ul>
-          <li><strong>Character Design</strong> — original character creation for creators, studios, and personal projects.</li>
-          <li><strong>Art Commissions</strong> — paintings, sketches, digital artwork, and tattoo designs.</li>
-          <li><strong>Voice Acting &amp; Voice-Over</strong> — available for selected projects (games, video, and creative work).</li>
+          <li><strong>Character Design</strong> — Original character design for creators and studios.</li>
+          <li><strong>Art Commissions</strong> — Paintings, sketches, digital artwork and tattoo designs.</li>
+          <li><strong>Voice Acting &amp; Voice-Over</strong> - Games, video and creative work.</li>
         </ul>
         <div class="services-note">
           For detailed service info, selected credits, pricing guides, and FAQs, please use <strong>Download FAQ &amp; Prices</strong> above.
