--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en
 
   <link rel="icon" type="/favicon_initials_32x32.png" sizes="32x32" href="/favicon.png">
-<link rel="icon" type="favicon_initials_16x16.png" sizes="16x16" href="/favicon.png">
+<link rel="icon" type="/favicon_initials_16x16.png" sizes="16x16" href="/favicon.png">
 
 
   
