--- a/index.html
+++ b/index.html
@@ -356,6 +356,35 @@
             </div>
           </div>
         </div>
+           <div class="artcard">
+              <div class="frame">
+                <div class="mount">
+                  <img class="artimg" src="/RACINGREPTILE.jpg" alt="Original acrylic painting example">
+                </div>
+              </div>
+            </div>
+   <div class="artcard">
+              <div class="frame">
+                <div class="mount">
+                  <img class="artimg" src="/conker.jpg" alt="Original acrylic painting example">
+                </div>
+              </div>
+            </div>
+   <div class="artcard">
+              <div class="frame">
+                <div class="mount">
+                  <img class="artimg" src="/pipsqueak.jpg" alt="Original acrylic painting example">
+                </div>
+              </div>
+            </div>
+   <div class="artcard">
+              <div class="frame">
+                <div class="mount">
+                  <img class="artimg" src="/skydiving.jpg" alt="Original acrylic painting example">
+                </div>
+              </div>
+            </div>
+
       </section>
 
       <!-- SERVICES -->
