--- a/index.html
+++ b/index.html
@@ -410,6 +410,17 @@
             </div>
           </div>
         </div>
+
+                    <div class="artcard">
+              <div class="frame">
+                <div class="mount">
+                  <img class="artimg" src="/KRYSTALPIC.jpg" alt="Original acrylic painting example">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        
       </section>
 
       <!-- SERVICES -->
