--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       margin-top: 40px;
     }
 
-    /* Extra grid for the two portrait pieces below */
+    /* Extra grid for the portrait pieces below */
     .artgrid--extra {
       margin-top: 40px;
     }
@@ -391,7 +391,7 @@
             </div>
           </div>
 
-          <!-- Third row: two portrait paintings -->
+          <!-- Third row: three portrait paintings -->
           <div class="artgrid artgrid--extra">
             <div class="artcard">
               <div class="frame">
@@ -408,10 +408,8 @@
                 </div>
               </div>
             </div>
-          </div>
-        </div>
 
-                    <div class="artcard">
+            <div class="artcard">
               <div class="frame">
                 <div class="mount">
                   <img class="artimg" src="/KRYSTALPIC.jpg" alt="Original acrylic painting example">
@@ -420,7 +418,6 @@
             </div>
           </div>
         </div>
-        
       </section>
 
       <!-- SERVICES -->
